Fixed navigation alignment

--- a/_sass/modules/_navigation.scss
+++ b/_sass/modules/_navigation.scss
@@ -98,6 +98,10 @@ nav {
 		flex-direction: column;
 		padding-bottom: 70px;
 
+		.container {
+			justify-content: center;
+		}
+
 		.logo {
 			display: none;
 		}
